# Nyquisis

./: pyproject.toml
nyquisis/: nyquisis.py
